--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,69 @@
-<!--#set var="title" value="OptimizedHTML 5" -->
+<!--#set var="title" value="EBQ-Test" -->
 <!--#include virtual="/parts/header.html" -->
 
-	<div style="max-width: 700px; margin: auto">
-
-		<img src="images/dist/preview.jpg" alt="Start HTML5 Template" style="width: 100%"><br><br>
-		<h2 class="heading">Welcome to startup HTML template OptimizedHTML 5!</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam reprehenderit nulla alias expedita a qui, pariatur doloremque ipsa fugit laboriosam odio iure recusandae laborum delectus praesentium magni reiciendis voluptatem. Sed.</p>
-
+<div class="main">
+	<div class="main_wrap">
+		<div class="main_nav">
+			<div class="main_nav_wrap">
+				<div class="main_nav_logo">
+					<img src="\images\dist\EBQ_Logo-Blue-Large-1.svg" alt="" srcset="">
+				</div>
+				<button class="contact contact-nav">Contact Us</button>
+			</div>
+		</div>
+		<div class="main_content">
+			<div class="main_content_wrap">
+				<div class="main_content_title">
+					<span class="title ">Integrated</span>
+					<span class="title title-bold">Marketing Services</span> 
+					</div>
+				<div class="main_content_text">
+					We turn your marketing plans
+					into action by building on your ideas and executing
+					initiatives alongside you and your team. Get a complete
+					department that can pivot to different areas of marketing based on your needs.
+				</div>
+			</div>
+		</div>
 	</div>
 
+
+
+</div>
+<div class="content">
+	<div class="content_wrap">
+		<div class="content_section">
+			<div class="content_text">
+				<div class="content_text_title">
+					<span class="title ">We’re experts with </span><span class="title title-bold">modern marketing tools,</span><span class="title ">so you don’t have to be!</span>  
+				</div>
+				<div class="content_text_paragraph">With hands-on experience in B2B’s
+					most innovative apps and tools,
+					we take a data-driven approach to continually
+					improve prospect engagement.
+					Whether we work directly out of your
+					platform or provide our insights manually,
+					you always get full visibility into the process.</div>
+			</div>
+			<div class="content_image">
+				<img src="/images/dist/Marketing_Tools.svg" alt="" srcset="">
+			</div>
+		</div>
+		<div class="content_section">
+
+			<div class="content_image">
+				<img src="/images/dist/Complete-Department-Marketing.png" alt="" srcset=""></div>
+			<div class="content_text">
+				<div class="content_text_title">
+					<span class="title title-bold">The best way </span> <span class="tilte">to build a marketing team</span>
+				</div>
+				<div class="content_text_paragraph">With EBQ, 
+					you’re not just hiring a marketing specialist. 
+					You’re getting an entire marketing department at a fraction of the cost and effort of hiring internally. 
+					For each project, we provide: a Success Manager to drive high-level strategy, a Project Manager to oversee day-to-day operations,
+					 and one or more Specialists working diligently to amplify your brand.</div>
+			</div>
+		</div>
+	</div>
+</div>
 <!--#include virtual="/parts/footer.html" -->
